Added lasagna recipe, taco and potato salad htmls

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,31 @@
   </head>
   <body>
     <h1>Lasagna</h1>
+
+    <img src="../images/Lasagna.jpg" alt="Picture of Lasagna" />
+
+    <h2>Description</h2>
+
+    <h3>Ingredients</h3>
+    <ul>
+      <li>Ground beef 400g</li>
+      <li>1 chopped onion</li>
+      <li>2 boats of garlic</li>
+      <li>2 spoons of tomato paste</li>
+      <li>1 dl water</li>
+      <li>Cheese until you're out of cheese</li>
+
+      <h4>Steps</h4>
+      <ol>
+        <li>Brown the ground beef dude</li>
+        <li>
+          Chop your onion and garlic and let it simmer with the ground beef
+          until golden
+        </li>
+        <li>add paste when beef + onion is good to go</li>
+        <li>add water and let it simmer more hehe</li>
+        <li>add the cheese son</li>
+      </ol>
+    </ul>
   </body>
 </html>
