--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <ul>
+      <li>
+        <a href="recipes/lasagna.html">Lasagna</a>
+      </li>
+      <li>
+        <a href="recipes/potato-salad.html">Potato Salad</a>
+      </li>
+      <li>
+        <a href="recipes/taco.html">Taco</a>
+      </li>
+    </ul>
   </body>
 </html>
