--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
+    <style>
+      div {
+        color: white;
+        background-color: black;
+      }
+
+      p {
+        color: red;
+      }
+    </style>
   </head>
   <body>
+    <div style="color: white; background-color: black"></div>
     <h1>Odin Recipes</h1>
     <ul>
       <li>
